# protoc-plugin-by-closure

./: .gitignore  AI_REFERENCES.md  Cargo.toml  crates.js  help.html  settings.html  src-files.js  struct.ProtocOnMemory.html
.github/workflows/: rust.yml  update-doc.yml
lib/: Cargo.toml  readme.md
lib/src/: lib.rs
lib/tests/: compiler_plugin.rs  test_call_wrapper.rs  test_on_memory.rs
lib/tests/compiler_plugin/: mod.rs
protoc_plugin_by_closure/: all.html  enum.ErrorKind.html  index.html  sidebar-items.js  struct.Protoc.html  struct.ProtocOnMemory.html  type.Result.html
proxy/: Cargo.toml  readme.md
proxy/src/: lib.rs
search.index/: 022c08fc2d58.js  047479ccbecf.js  119489b1d670.js  1bf135715194.js  419983127085.js  48a1f2bc5140.js  53241ec0168f.js  556e98df26e7.js  69d80b02c9e4.js  6a6b0f05a70a.js  73bffc719512.js  7a7d7156c864.js  7e9c499f6c7d.js  root.js
search.index/crateNames/: 78fc066898e3.js
search.index/desc/: c1e308c25629.js
search.index/entry/: c7e68ad034b9.js  ff48704c6489.js
search.index/function/: 0f0340d497c3.js  72dd49928cf0.js
search.index/generic_inverted_index/: e3dc047fd725.js  f3b60f752fd9.js
search.index/name/: 2e05672cb32a.js  3231452b622c.js
search.index/normalizedName/: 2dba30847ab2.js  abc813241238.js
search.index/path/: ba050ad223e7.js  ff4adb227c0f.js
search.index/type/: 3a2fba707ab2.js  4a535e906e50.js
src/protoc_plugin_by_closure/: lib.rs.html
tests/: compiler_plugin.rs  test_call_wrapper.rs
trait.impl/core/convert/: trait.From.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/core/result/: enum.Result.js
