[package]
name = "protoc-plugin-by-closure"
version = "0.1.9"
edition = "2024"
description = "Use Google Protocol Buffer compiler (`protoc`) with your closure code."
license = "Apache-2.0"
repository = "https://github.com/wada314/protoc-plugin-by-closure"
documentation = "https://wada314.github.io/protoc-plugin-by-closure/protoc_plugin_by_closure/index.html"

[lib]
doctest = false

[dependencies]
ipc-channel = "0.20.1"
thiserror = "2.0.9"
protoc-plugin-proxy = { path = "../proxy", optional = true }
wait-timeout = "0.2.0"
tempfile = { version = "3.15.0", optional = true }

[dev-dependencies]
tempfile = "3.15.0"
puroro = "0.14.0"

[features]
default = ["on-memory"]
on-memory = ["tempfile"]
nightly = ["protoc-plugin-proxy/nightly"]

[package.metadata.docs.rs]
cargo-args = ["-Zbindeps"]
features = ["nightly"]
