[package]
name = "protoc-plugin-proxy"
version = "0.1.0"
edition = "2024"
description = "Proxy crate for protoc-plugin-bin dependency management"
license = "Apache-2.0"
repository = "https://github.com/wada314/protoc-plugin-by-closure"
documentation = "https://wada314.github.io/protoc-plugin-by-closure/protoc_plugin_by_closure/index.html"

[dependencies]
# Include protoc-plugin-bin binary dependency (requires nightly compiler)
protoc-plugin-bin = { path = "../bin", version = "0.1.2", artifact = "bin:protoc-plugin-bin" }
